--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.5.0",
     "react-markdown": "^9.0.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.3"
